# cudnn-training

./: .gitignore  CMakeLists.txt  CompileCU.bat  GlobalInits.h  LICENSE  Makefile  NNcontext.h  NNkernels.h  NNlayers.h  README.md  cudnn-training.sln  cudnn-training.vcxproj  helpers.h  lenet.cu  readubyte.cpp  readubyte.h
